Gatekeeper/constraints/deny-latest-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyImageLatest
metadata:
  name: disallow-latest-tag
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
