Gatekeeper/constraints/deny-run-as-root-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyRootUser
metadata:
  name: disallow-root-user
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
